--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <h1>First Assignment</h1>
+    <h1>First Assignment on web development</h1>
     <img src="images/77.jpg">
     <br>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non harum saepe animi velit modi nisi! Iure distinctio ab possimus incidunt odit dicta accusamus quos expedita, illum harum quisquam aspernatur reiciendis?</p>
