style sheet added and index.html modified

--- a/index.html
+++ b/index.html
@@ -2,9 +2,161 @@
 <html lang="eng">
 
 <head>
+    <!DOCTYPE html>
+    <html lang="eng">
+
+    <head>
+        <title>Letsupgrade Webclass</title>
+        <meta charset="utf-8">
+        <link href="style.css" rel="stylesheet">
+
+    </head>
+
+    <body>
+        <h1>First Assignment1</h1>
+        <img src="images/77.jpg">
+        <br>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non harum saepe animi velit modi nisi! Iure distinctio ab possimus incidunt odit dicta accusamus quos expedita, illum harum quisquam aspernatur reiciendis?</p>
+        <br>
+        <div>
+            <p>This is a Table of 10 rows</p>
+            <table border="2" cell-spacing="10" cellpadding="10">
+                <tr>
+                    <th>NAME</th>
+                    <th>AGE</th>
+                </tr>
+                <tr>
+                    <td>Adesunbo</td>
+                    <td>40</td>
+                </tr>
+                <tr>
+                    <td>George</td>
+                    <td>45</td>
+                </tr>
+                <tr>
+                    <td>Alex</td>
+                    <td>26</td>
+                </tr>
+                <tr>
+                    <td>Omowumi</td>
+                    <td>37</td>
+                </tr>
+                <tr>
+                    <td>David</td>
+                    <td>30</td>
+                </tr>
+                <tr>
+                    <td>Dennis</td>
+                    <td>29</td>
+                </tr>
+                <tr>
+                    <td>Alfred</td>
+                    <td>44</td>
+                </tr>
+                <tr>
+                    <td>Kunal</td>
+                    <td>42</td>
+                </tr>
+                <tr>
+                    <td>Azmad</td>
+                    <td>33</td>
+                </tr>
+                <tr>
+                    <td>Ankar</td>
+                    <td>18</td>
+                </tr>
+            </table>
+            <section>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit, cum ipsum repudiandae </p>
+                <p>This is another page</p>
+            </section>
+            <p>This is to test space selector</p>
+        </div>
+        <p>This is to test adjacent selector. select all the paragraph after a div</p>
+        <hr>
+        <div>
+            <ol>
+                <p>5 Kitchen utensils</p>
+                <li>Knife</li>
+                <li>Pot</li>
+                <li>frying pan</li>
+                <li>Grater</li>
+                <li>Gas cooker</li>
+            </ol>
+        </div>
+        <div>
+            <ul>
+                <p>5 names of Animals</p>
+                <li>Dog</li>
+                <li>Pig</li>
+                <li>Cow</li>
+                <li>Rabbit</li>
+                <li>Lion</li>
+            </ul>
+        </div>
+        <p>this should test for Adjacent selector, since it is affect all p after a div</p>
+        <hr>
+        <div>
+            <form action="# " method="post " novalidate autocomplete="false ">
+                <div>
+                    <label for="fullname ">Full name:</label>
+                    <input type="text " name="fullname " placeholder="Enter full name " required id=" f ullname ">
+                </div>
+                <br>
+                <div>
+                    <label for="email ">E-maill address:</label>
+                    <input type="email " name="email " id="email ">
+                </div>
+                <br>
+                <div>
+                    <label>Phone number:</label>
+                    <input type="tel ">
+                </div>
+                <br>
+                <div>
+                    <labe>Male</labe>
+                    <input type="radio" name="gender">
+                </div>
+                <div>
+                    <label>Female</label>
+                    <input type="radio" name="gender">
+                </div>
+                <br>
+                <div>
+
+                    <label>Education:</label>
+                    <select name=" " id=" ">
+                        <option value=" ">Select one</option>
+                        <option value="Phd ">Doctorate</option>
+                        <option value="MSc ">Master</option>
+                        <option value="Bsc ">Bachelor</option>
+                        <option value="Undergraduate ">Undergraduate</option>
+                    </select>
+                </div>
+                <br>
+                <button type="submit ">Send data</button>
+            </form>
+        </div>
+        <p>Also this should be affected by Adjacent selector</p>
+        <!--<hr>
+        <br>
+        <b>this is awesome</b>
+        <br>
+        <i>this is italic</i>
+        <br>
+        <strong>This is strong, like bold but different</strong>
+        <br>
+        <u>This is underline</u>
+        <hr>
+        <a href=" https://google.com " target="blank ">Google</a>-->
+        <div></div>
+    </body>
+
+    </html>
     <title>Letsupgrade Webclass</title>
     <meta charset="utf-8">
-    <style href="index.css"></style>
+    <link href="style.css" rel="stylesheet">
+    </style>
 </head>
 
 <body>
