--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <html lang="eng">
 
     <head>
-        <title>Letsupgrade Webclass</title>
+        <title>Web Assignment2</title>
         <meta charset="utf-8">
         <link href="style.css" rel="stylesheet">
 
@@ -153,7 +153,7 @@
     </body>
 
     </html>
-    <title>Letsupgrade Webclass</title>
+    <title>Letsupgrade WebgAssignment</title>
     <meta charset="utf-8">
     <link href="style.css" rel="stylesheet">
     </style>
@@ -276,6 +276,7 @@
             <button type="submit ">Send data</button>
         </form>
     </div>
+    <p>Also this should be affected by Adjacent selector</p>
     <!--<hr>
     <br>
     <b>this is awesome</b>
